<resources>
    <string name="app_name">Oral Care For The Elderly</string>
    <string name="action_settings">Settings</string>
    <string name="cavitiesHead">Dental Cavities</string>
    <string name="cavitiesInfo">Cavities (or Caries) occur as a result of tooth decay.\n\nTooth decay is the destruction of the tooth structure. Tooth decay can affect both the enamel and the dentin.</string>
    <string name="cavity_pic">cavity_pic</string>
    <string name="New_Activity">New Activity</string>
    <string name="button">Self Care</string>
    <string name="b">Patient Care</string>
    <string name="c">Login</string>
    <string name="d">Information</string>
    <string name="title_activity_natural_teeth">Natural Teeth</string>
    <string name="natural_teeth">Natural Teeth</string>
    <string name="denture_care">Denture Care</string>
    <string name="mouth_care">Mouth Care</string>
    <string name="difficulty_with_mouth_opening">Difficulty with Mouth Opening</string>
    <string name="dry_mouth">Dry Mouth</string>
    <string name="why_important">Why Oral Care is Important</string>
    <string name="oral_health">Oral Health</string>
    <string name="dex_issues">Dexterity Issues</string>
    <string name="care4denture">Care for Dentures</string>
    <string name="title_activity_gum_disease_main">Gum Disease</string>
    <string name="gumDiseaseSigns">Signs</string>
    <string name="gumDiseaseCauses">Causes</string>
    <string name="cavitiesTitle">Cavities</string>
    <string name="plaqueTitle">Plaque</string>
    <string name="title_activity_register">Register</string>
    <string name="empty_string" />
    <string name="title_activity_dry_mouth_remedies">Dry Mouth Remedies</string>
    <string name="oralBalanceData"><![CDATA[Oralbalance©\n\nA long lasting lubricant that relieves, soothes and protects dry mouth tissues against dry discomfort, minor irritations, and burning sensations.]]></string>
    <string name="water_glass">Regular Water\n\nKeep a water bottle handy and take sips frequently.</string>
    <string name="water_info">Keep a water bottle handy and take sips frequently. It\'s also important to stay away from acidic beverages, such as orange juice, soda and any drink that contains citric or phosphoric acid.</string>
    <string name="sweets">Sugar-Free Sweets\n\nSuck on sugar-free hard candies to stimulate the flow of saliva.</string>
    <string name="sweets_info">Suck on sugar-free hard candies to stimulate the flow of saliva.</string>
    <string name="mouthWashHead">Bioxtra Mouthwash (250ml)(BIOX3)</string>
    <string name="mouthWashBullets">● Prolonging the action of BioXtra toothpaste \n● Supplementing saliva\'s natural protective mechanisms \n● Maintaining a pH which helps prevent plaque formation \n● Refreshing and moistening the mouth</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">Logout</string>
    <string name="oralB">Oralbalance© long lasting lubricant relieves, soothes and protects dry mouth tissues against dry discomfort, minor irritations, and burning sensations.</string>
    <string name="newTo">New to DentalTech? Register here</string>
    <string name="logo">logo</string>
    <string name="username">Username :</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password :</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="image_count">image_count</string>
    <string name="testIMG">testIMG</string>
    <string name="dryMouthHead">Understanding Problems associated with Dry Mouth</string>
    <string name="dryMouthInfo">● Dry mouth is not a normal part of aging.\n\n● Many common medications reduce the production of saliva.\n\n● Many of the persons you care for are taking these medications and will suffer from dry mouth.\n\n● Dry mouth can increase risk of dental cavities, gum disease and infection.\n\n● Dry mouth can also make it hard to eat, swallow, taste, speak and can cause dentures not to fit properly.</string>
    <string name="drymouthhead">dryMouthHead</string>
    <string name="drymouthinfo">dryMouthInfo</string>
    <string name="gumDiseaseSignsInfo">● Bleeding Gums\n\n● Red, swollen, or tender gums\n\n● Persistent bad breath\n\n● Bad taste in the mouth\n\n● Receding gums\n\n● Formation of deep pockets\n\n● Loose or shifting teeth</string>
    <string name="gumDiseaseCausesInfo">► Illnesses may affect the condition of the gums.\n\n► Medications can affect oral health.\n\n► Bad habits such as smoking, make it harder for gum tissue to repair itself.\n\n► Poor oral hygiene habits.\n\n► Family history of dental disease.</string>
    <string name="resident_change_1"> 1. Please email nursinghome@dentaltech.ie\n2. Have in hands Residents full name\n3. Provide either their PPS number or Medical card number so that we can update our records\n4. Let us know which one of the above 4 options apply</string>
    <string name="resident_change_2">1. Please email nursinghome@dentaltech.ie \n2. Have in hands complete medical history form for this new resident \n3. Please include a photo copy of the resident’s medical card \n4. Let us know if there is any specific dental issue that needs immediate attention. \n\nNote: We will endeavour to examine all new but we cannot always guarantee this.</string>
    <string name="resident_damaged">Please wrap the denture up safely with all of the prices. Place in a envelope with the patients name and a photocopy of their medical card or a cheque for €85 if no medical card or invalid/expired medical card. Please call Dental Tech Group on 01 455 1866 and we will collect the denture for repair and return within 24 hours.</string>
    <string name="resident_damaged2">We will need to schedule a visit to take an impression of the patients mouth, Please Call Dental Tech Group on 01 455 1866.</string>
    <string name="resident_damaged3">Please Call Dental Tech Group on 01 455 1866 to discuss. </string>
    <string name="dexMain_head">User Friendly Hygiene Aids</string>
    <string name="elec_brush_head">Electric Toothbrush</string>
    <string name="collis_head">Collis Curve Toothbrush</string>
    <string name="floss_head">Floss Holders</string>
    <string name="interdental_head">Inter Dental Brushes</string>
    <string name="handle_grips_head">Handle Grips</string>
    <string name="three_way_head">Dr Barmans 3-Way Toothbrush</string>
    <string name="dexterityMain">The following are some user friendly hygiene aids that can be of help in cases where there are dexterity issues.</string>
    <string name="elec_brush">Electric toothbrushes have larger handles that can be gripped more easily by persons with physical impairments.\n\nThey are also easier for caregivers to use when cleaning someone else’s teeth.</string>
    <string name="collis">The Collis Curve toothbrush is designed with three rows of bristles that can clean the front, back, and top surfaces of teeth at the same time.\n\nThis brush may be easier for caregivers to use and also for older persons that have limited movement in their fingers and hands.</string>
    <string name="floss">Flossing can be difficult to do even for those of us that don’t have any physical or cognitive impairments.\n\nFor more control you could try holders that come with long handles.\n\nThis dental aid can be very helpful for caregivers.</string>
    <string name="interdental">Inter Dental-brushes are little toothbrushes and come in a variety of sizes.\n\nThese are especially good when there are spaces between teeth.\n\nPiksters are the interdental brushes we recommend as they have a longer handle than other varieties.</string>
    <string name="handle_grips">Two or three of these on a toothbrush can help those with  manual Dexterity issues.</string>
    <string name="three_way">Ideal as, like the collis curve, you can clean font back and top of teeth at the same time.</string>
    <string name="plaqueHead">What is Plaque?</string>
    <string name="plaqueInfo1">Plaque is the most common and serious dental health issue.\n\nIt is a soft and sticky film of bacteria from food and sweets.\n\nHardened plaque is called calculus and holds bacteria in the mouth. It causes damage to the gums and bone that supports the teeth.</string>
    <string name="plaqueInfo2">It is plaque, not aging, that causes tooth loss!</string>
    <string name="oralcarehead1">Why is Oral Health Important?</string>
    <string name="oralcarehead2">The mouth is a mirror of health and disease</string>
    <string name="oralcarehead3">Importance of Dental Health to Overall Health and Well-Being</string>
    <string name="oralcarehead4">Consequences of\nPoor Oral Health – Psychological</string>
    <string name="oralcarehead5">Consequences of\nPoor Oral Health- Physical</string>
    <string name="oralcarebody1">► Dental health is important because dental disease and mouth problems are common in the nursing home and homebound population.\n\n►You have probably noticed that many of the persons you care for have problems with their mouths.</string>
    <string name="oralcarebody2">The mouth has been called a mirror of health and disease because there you’ll find signs of:\n\n► Systemic diseases\n\n► Nutritional deficiencies</string>
    <string name="change_in_residents">Change in Residents</string>
    <string name="new_resident">New Resident</string>
    <string name="please_choose_one_of_the_following_options">Please Choose one of the following options:</string>
    <string name="type_of_denture">Choose the type of Denture</string>
    <string name="p_denture">Partial Denture</string>
    <string name="f_denture">Full Denture</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="parts_missing">Are any Teeth or Parts Missing?</string>
    <string name="clean_break">Is there a crack or a clean break?</string>
    <string name="before_call"><![CDATA[Before calling Dental Tech Group, please check the following information so that we can make an assessment of need and urgency.]]></string>
    <string name="em_q1">1. Is the patient capable of expressing/identifying the source of their pain?</string>
    <string name="em_q2">2. Has the GP been able to identify the source of the pain?</string>
    <string name="em_q3">3. Was the patient kept awake with the pain or becoming agitated?</string>
    <string name="em_q4">4. Do you need to give pain killers? If yes, what have you given and are they effective?</string>
    <string name="em_q5">5. Does the patient have a loose tooth causing discomfort/pain?</string>
    <string name="em_q6">6. Is there soreness being caused by a denture?</string>
    <string name="em_q7">7. Is there any swelling/abscess?</string>
    <string name="em_q8">8. Is there a suspicious lesion?</string>
    <string name="em_callout">Please call Dental Tech Group on (01)455 1866 and we will help assess if an emergancy call out is needed</string>
    <string name="Contact_page3">Home Care Clinics:\n Talk to Matthew or send an enquiry;\n Phone: 01 4551866\n Email: athome@dentaltech.ie\nOpening hours are\n MON – FRI 8:30 – 17:30</string>
    <string name="Contact_page4">Nursing Home Clinics:\n Talk to Matthew or send an \nenquiry; \nPhone: 01 4551866\n Email: \nnursinghome@dentaltech.ie\nOpening hours are\n MON – FRI 8:30 – 17:30</string>
    <string name="Contact_page5">Corporate Dental:\n Talk to Bevin or send an enquiry;\nPhone: 01 4551866 \nEmail: corporate@dentaltech.ie\nOpening hours are \nMON – FRI 8:30 – 17:30</string>
    <string name="Contact_page2">Denture Clinics:\n Talk to Amy or book in online;\n Phone: 01 4551 866\n Email: clinics@dentaltech.ie \n Opening hours are \nMON – FRI 8:30 – 17:30</string>
</resources>