<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projects.nicola.oralcarefortheelderly.MainActivity">

    <Button
        android:id="@+id/A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/button"
        android:onClick="gotoSelfCare"/>

    <Button
        android:id="@+id/B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/b"
        android:layout_below="@+id/A"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="gotoPatientCare"/>

    <Button
        android:id="@+id/C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/B"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/c"
        android:onClick="gotoLogin"/>

    <Button
        android:id="@+id/D"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/C"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/d"
        android:onClick="gotoInformation"/>
</RelativeLayout>
