<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.projects.nicola.oralcarefortheelderly.login_register"
    tools:showIn="@layout/activity_login_register">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
        <!--Header-->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:gravity="center">
            <!--LOGO-->
            <ImageView
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                />
            <!-- END LOGO -->
        </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/header"
        >
        <TextView
            android:id="@+id/Username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/ETUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="10dip"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/TVPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textSize="24sp"
             />

        <EditText
            android:id="@+id/ETPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:layout_marginTop="5dip"
            android:maxLines="1"
            />

        <Button
            android:id="@+id/Login_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:text="@string/login"
            android:onClick="onLogin"
            android:layout_gravity="center"
            android:width="180dp"
            android:textSize="20sp"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
