<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.projects.nicola.oralcarefortheelderly.Resident"
    tools:showIn="@layout/activity_resident"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/Resident_Questioin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/please_choose_one_of_the_following_options"
        android:textSize="24sp"
        android:gravity="center"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/Radio_Resident"
        android:gravity="center"
        >
        <RadioButton android:id="@+id/Change_In_Residents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_in_residents"
            android:onClick="onRadioButtonClicked"
            android:textSize="17sp"/>
        <RadioButton android:id="@+id/new_resident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_resident"
            android:onClick="onRadioButtonClicked"
            android:textSize="17sp"/>
    </RadioGroup>

        <TextView
            android:id="@+id/TVResident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/empty_string"
            android:textSize="20sp"
            />

</LinearLayout>
