<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projects.nicola.oralcarefortheelderly.information"
    android:orientation="vertical">


    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        mapbox:mapbox_cameraTargetLat="53.3069832"
        mapbox:mapbox_cameraTargetLng="-6.3210787"
        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
        mapbox:mapbox_cameraZoom="11"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp">
        <TextView
            android:layout_width="190dp"
            android:layout_height="125dp"
            android:padding="5dp"
            android:text="@string/Contact_page2"
            android:textSize="12sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="125dp"
            android:text="@string/Contact_page3"
            android:textSize="12sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:text="@string/Contact_page4"
            android:textSize="12sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:text="@string/Contact_page5"
            android:textSize="12sp" />
    </LinearLayout>
    <!--FOOTER-->
    <LinearLayout android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="90dip"
        android:orientation="vertical"
        android:background="@drawable/footer"
        android:layout_alignParentBottom="true">
    </LinearLayout>
    <!--End FOOTER-->
</LinearLayout>